--- a/style.css
+++ b/style.css
@@ -88,3 +88,16 @@ button {
 	right: 0;
 	width: 250px;
 }
+
+.ng-hide-add, .ng-hide-remove {
+	display: block !important;
+}
+.story-container {
+	-webkit-transition: 1s linear all;
+	transition: 1s linear all;
+	opacity: 1;
+}
+
+.story-container.ng-hide {
+	opacity: 0;
+}
